--- a/src/css/index.css
+++ b/src/css/index.css
@@ -26,3 +26,7 @@ button.btn-red {
     @apply py-1 border rounded-md border-red-700 bg-red-500 text-white
     hover:bg-red-600 active:bg-red-700;
 }
+
+react-datalist-input__listbox {
+	height: 500px;
+}
