--- a/src/css/index.css
+++ b/src/css/index.css
@@ -9,6 +9,10 @@ body {
 @tailwind components;
 @tailwind utilities;
 
+::selection {
+    @apply bg-blue-500/25;
+}
+
 input {
     @apply outline-none px-2 py-1 rounded-md border border-neutral-200 w-full;
 }
