--- a/src/css/index.css
+++ b/src/css/index.css
@@ -13,11 +13,11 @@ body {
     @apply bg-blue-500/25;
 }
 
-input {
+input, textarea {
     @apply outline-none px-2 py-1 rounded-md border border-neutral-200 w-full;
 }
 
-label > input {
+label > input, textarea {
     @apply my-2;
 }
 
